solution/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guestbook
spec:
  replicas: 3
  selector:
    matchLabels:
      app: guestbook
      project: dojo
  template:
    metadata:
      labels:
        app: guestbook
        project: dojo
    spec:
      containers:
        - name: guestbook
          image: guestbook:v0.1.0
          ports:
            - containerPort: 3000
              name: http
          resources:
            requests:
              memory: "128Mi"
              cpu: 100m
            limits:
              memory: "128Mi"
              cpu: 100m
          readinessProbe:
            httpGet:
              path: "/healthz"
              port: http
          livenessProbe:
            httpGet:
              path: "/healthz"
              port: http
