solution/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: guestbook
spec:
  selector:
    app: guestbook
    project: dojo
  ports:
    - port: 3000
      targetPort: http
      name: http
